# P-OM

./: CMakeLists.txt  README.md  TODO  main.cpp
analysis/angular_acceptance/: angular_acceptance.ipynb  angular_acceptance_single_pmt.ipynb
analysis/data_validation/: plot_detection_points.py  plot_detection_sphere.py  plot_photocathode_absorbtion_hist.py  simple_acceptance.py
analysis/muon_track/: muon track.ipynb
analysis/rogue_photons/: output_file.txt  rogue_photons.ipynb
geometry/P-OM_hemisphere_v11/: mother.gdml
geometry/P-OM_hemisphere_v11/Volumes/: HV_divider004_43.gdml  HV_divider005_57.gdml  HV_divider006_62.gdml  HV_divider007_67.gdml  collar002_16.gdml  collar004_20.gdml  collar006_27.gdml  collar_3.gdml  lock001_9.gdml  lock002_13.gdml  lock007_24.gdml  lock_5.gdml
geometry/P-OM_hemisphere_v13/: mother.gdml
geometry/P-OM_hemisphere_v13/Volumes/: HV_divider001_13.gdml  HV_divider002_31.gdml  HV_divider003_36.gdml  HV_divider004_41.gdml  HV_divider005_55.gdml  HV_divider006_60.gdml  HV_divider007_65.gdml  HV_divider_5.gdml  HV_panel_mount_2_74.gdml  M4_nut_75.gdml  M4_washer_77.gdml  Optical_gel_8.gdml  alignment_ring001_66.gdml  alignment_ring002_67.gdml  alignment_ring003_68.gdml  alignment_ring004_69.gdml  alignment_ring005_70.gdml  alignment_ring006_71.gdml  alignment_ring007_72.gdml  alignment_ring_14.gdml  collar001_9.gdml  collar002_27.gdml  collar003_32.gdml  collar004_37.gdml  collar005_51.gdml  collar006_56.gdml  collar007_61.gdml  collar_1.gdml  collar_compensator001_12.gdml  collar_compensator002_30.gdml  collar_compensator003_35.gdml  collar_compensator004_40.gdml  collar_compensator005_54.gdml  collar_compensator006_59.gdml  collar_compensator007_64.gdml  collar_compensator_4.gdml  light_guide_01_73.gdml  lock001_16.gdml  lock002_21.gdml  lock003_22.gdml  (+13 more)
geometry/P-OM_module_v11/: mother.gdml  mother_closed_frame.gdml
geometry/P-OM_module_v11/Volumes/: HV_divider002_18.gdml  HV_divider003_21.gdml  (+21 more)
geometry/P-OM_module_v13/: mother.gdml
geometry/PDOR_v11_assemb_simple/: mother.gdml
geometry/PDOR_v11_assemb_simple_full_module/: mother.gdml  mother_closed_frame.gdml
include/: OMConstruction.hh  OMConstructionMessenger.hh  OMDataManager.hh  OMDataManagerMessenger.hh  OMDataReader.hh  OMMaterialManager.hh  OMPrimaryGenerator.hh  OMRunAction.hh  OMSteppingAction.hh  OMTrackingAction.hh
macros/: init.mac  init_data.mac  init_geom.mac  init_physics.mac  init_primary.mac  init_primary_mu.mac  init_primary_photon.mac  init_vis.mac  optical_properties.cfg  run.mac
src/: OMConstruction.cpp  OMConstructionMessenger.cpp  OMDataManager.cpp  OMDataManagerMessenger.cpp  OMDataReader.cpp  OMMaterialManager.cpp  OMPrimaryGenerator.cpp  OMRunAction.cpp  OMSteppingAction.cpp  OMTrackingAction.cpp
(+99 files in other folders)
